Fix alignment and classes
Items in content-one aligned to center, bottom margin of 100px added to both which fixed centering in condensed and full screen along cross axis. Changed p class for text in side-text to divs for consistency, began content-two.

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ button {
     display: flex;
     flex-direction: column;
     margin-left: 15px;
+    margin-bottom: 100px;
 }
 
 .side-pic {
